crates/nirvash-macros/tests/fixtures/code_tests_legacy_fresh.stderr
error: fresh = ... is no longer supported; declare fresh_runtime() on CodeConformanceSpec
   --> tests/fixtures/code_tests_legacy_fresh.rs:107:49
    |
107 | #[code_tests(spec = Spec, init = initial_state, fresh = tests::fresh_driver)]
    |                                                 ^^^^^
